fix image size on mobile by updating main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2037,6 +2037,13 @@ input, select, textarea {
 
 /* Image */
 
+	.special {
+		border-radius: 0.35em;
+		border: 0;
+		display: inline-block;
+		position: relative;
+	}
+
 	.image {
 		border-radius: 0.35em;
 		border: 0;
@@ -2044,7 +2051,7 @@ input, select, textarea {
 		position: relative;
 	}
 
-		.image:before {
+		/*.image:before {
 			-moz-transition: opacity 0.2s ease-in-out;
 			-webkit-transition: opacity 0.2s ease-in-out;
 			-ms-transition: opacity 0.2s ease-in-out;
@@ -2059,13 +2066,45 @@ input, select, textarea {
 			position: absolute;
 			top: 0;
 			width: 100%;
-		}
+		}*/
 
+		.special:before {
+			-moz-transition: opacity 0.2s ease-in-out;
+			-webkit-transition: opacity 0.2s ease-in-out;
+			-ms-transition: opacity 0.2s ease-in-out;
+			transition: opacity 0.2s ease-in-out;
+			background: url("images/overlay.png");
+			border-radius: 0.35em;
+			content: '';
+			display: block;
+			height: 100%;
+			left: 0;
+			opacity: 0.1;
+			position: absolute;
+			top: 0;
+			width: 100%;
+		}
+		.nohover:before {
+			-moz-transition: opacity 0.2s ease-in-out;
+			-webkit-transition: opacity 0.2s ease-in-out;
+			-ms-transition: opacity 0.2s ease-in-out;
+			transition: opacity 0.2s ease-in-out;
+			background: url("images/overlay.png");
+			border-radius: 0.35em;
+			content: '';
+			display: block;
+			height: 100%;
+			left: 0;
+			opacity: 0.1;
+			position: absolute;
+			top: 0;
+			width: 100%;
+		}
 		.image.thumb {
 			text-align: center;
 		}
 
-			.image.thumb:after {
+			/*.image.thumb:after {
 				-moz-transition: opacity 0.2s ease-in-out;
 				-webkit-transition: opacity 0.2s ease-in-out;
 				-ms-transition: opacity 0.2s ease-in-out;
@@ -2087,7 +2126,7 @@ input, select, textarea {
 				text-decoration: none;
 				top: 50%;
 				white-space: nowrap;
-			}
+			}*/
 
 			.image.thumb:hover:after {
 				opacity: 1.0;
@@ -2098,7 +2137,55 @@ input, select, textarea {
 				opacity: 1.0;
 			}
 
+		.special {
+			text-align: center;
+		}
+
+			/*.special:after {
+				-moz-transition: opacity 0.2s ease-in-out;
+				-webkit-transition: opacity 0.2s ease-in-out;
+				-ms-transition: opacity 0.2s ease-in-out;
+				transition: opacity 0.2s ease-in-out;
+				border-radius: 0.35em;
+				border: solid 3px rgba(255, 255, 255, 0.5);
+				color: #fff;
+				content: '';
+				display: inline-block;
+				font-size: 0.8em;
+				font-weight: 400;
+				left: 50%;
+				line-height: 2.25em;
+				margin: -1.25em 0 0 -3em;
+				opacity: 0;
+				padding: 0 1.5em;
+				position: absolute;
+				text-align: center;
+				text-decoration: none;
+				top: 50%;
+				white-space: nowrap;
+			} */
+
+			.special:hover:after {
+				opacity: 1.0;
+			}
+
+			.special:hover:before {
+				background: url("images/overlay.png"), url("images/overlay.png");
+				opacity: 0.5;
+			}
+
 		.image img {
+			border-radius: 0.35em;
+			display: block;
+		}
+
+
+		.special img {
+			border-radius: 0.35em;
+			display: block;
+		}
+
+		.nohover img {
 			border-radius: 0.35em;
 			display: block;
 		}
@@ -2133,6 +2220,27 @@ input, select, textarea {
 				width: 100%;
 			}
 
+
+		.special {
+			display: block;
+			margin: 0 0 2em 0;
+			width: 100%;
+		}
+
+			.special img {
+				width: 100%;
+			}
+
+		.nohover {
+			display: block;
+			margin: 0 0 2em 0;
+			width: 100%;
+		}
+
+			.nohover img {
+				width: 100%;
+			}
+
 		.image.avatar {
 			border-radius: 100%;
 		}
@@ -2145,6 +2253,9 @@ input, select, textarea {
 				border-radius: 100%;
 				width: 100%;
 			}
+
+
+
 
 /* List */
 
@@ -3005,9 +3116,6 @@ input, select, textarea {
 					font-size: 1.25em;
 				}
 
-					#header h1 br {
-						display: none;
-					}
 
 				#header > .inner {
 					margin-bottom: 0;
